# py-jura

./: .gitignore  .pre-commit-config.yaml  .release-please-config.json  CHANGELOG.md  LICENSE  README.md  pyproject.toml  release-please-config.json
.github/workflows/: lint.yml  release.yml  test.yml
src/py_jura/: __init__.py  _connection.py  _helpers.py  encoder.py  exceptions.py  machine.py  models.py  products.py  protocol.py
src/py_jura/machines/: __init__.py  ef1012.py  ef1013.py  ef1030.py  ef1031.py  ef1060.py  ef1065.py  ef1069.py  ef1070.py  ef1089.py  ef1090.py  ef1091.py  ef1092.py  ef1096.py  ef1097.py  ef1100.py  ef1105.py  ef1106.py  ef1115.py  ef1120.py  ef1121.py  ef1127.py  ef1128.py  ef1139.py  ef1148.py  ef1151.py  ef1184.py  ef526.py  ef529.py  ef532.py  ef532coffeeonly.py  ef532v2.py  ef533.py  ef533v2.py  ef534.py  ef535.py  ef535v2.py  ef536.py  ef537.py  ef538.py  (+30 more)
tests/: conftest.py  test_encoder.py  test_exceptions.py  test_machine.py  test_machines.py  test_models.py  test_products.py  test_protocol.py
