[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py-jura"
version = "0.2.1"
description = "A Python library for interacting with Jura coffee machines over Bluetooth"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    {name = "g4bri3lDev", email = "admin@g4bri3l.de"}
]

keywords = []  # TODO: Add relevant keywords
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "bleak>=0.21.0",
    "bleak-retry-connector>=3.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=7.0.0",
]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.14.10"
]

[project.urls]
Homepage = "https://github.com/g4bri3lDev/py-jura"
Repository = "https://github.com/g4bri3lDev/py-jura"
Documentation = "https://github.com/g4bri3lDev/py-jura#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/py_jura"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
exclude = ["tests/"]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.design]
max-args = 7
max-positional-arguments = 7
max-branches = 15
max-attributes = 10

[tool.pylint.messages_control]
disable = [
    "broad-exception-caught",   # intentional best-effort catches in BLE callbacks
    "duplicate-code",           # machine definitions share structural patterns by design
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "hardware: mark test as requiring a physical JURA machine",
]

[dependency-groups]
dev = [
    "prek>=0.3.4",
    "pylint>=4.0.5",
]
